// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Password renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw liArUm"
      disabled={true}
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        medium
      </label>
      <div
        className="sc-hBdhWE ggdNEt"
      >
        <input
          className="sc-kvmHFZ tlMXB"
          disabled={true}
          placeholder=" "
          type="password"
        />
        <div
          className="sc-fpJand dnxibe"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw liArUm"
      disabled={true}
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        large
      </label>
      <div
        className="sc-hBdhWE ggdNEt"
      >
        <input
          className="sc-kvmHFZ JSuiW"
          disabled={true}
          placeholder=" "
          type="password"
        />
        <div
          className="sc-fpJand dnxibe"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw liArUm"
      disabled={true}
    >
      <div
        className="sc-hBdhWE dIdpZs"
      >
        <input
          className="sc-kvmHFZ frJYJw"
          disabled={true}
          placeholder=" "
          type="password"
        />
        <label
          className="sc-imdKTc hgJXpw"
        >
          xlarge
        </label>
        <div
          className="sc-fpJand dnxibe"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        medium
      </label>
      <div
        className="sc-hBdhWE ggdNEt"
      >
        <input
          className="sc-kvmHFZ gnfITX"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-fpJand dnxibe"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-iGCPWW cQbMKi"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        large
      </label>
      <div
        className="sc-hBdhWE ggdNEt"
      >
        <input
          className="sc-kvmHFZ ligaZU"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-fpJand dnxibe"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-iGCPWW cQbMKi"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <div
        className="sc-hBdhWE dIdpZs"
      >
        <input
          className="sc-kvmHFZ jaLpWy"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="sc-imdKTc hgJXpw"
        >
          xlarge
        </label>
        <div
          className="sc-fpJand dnxibe"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-iGCPWW cQbMKi"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        medium
      </label>
      <div
        className="sc-hBdhWE ggdNEt"
      >
        <input
          className="sc-kvmHFZ tlMXB"
          placeholder=" "
          readOnly={true}
          type="password"
        />
        <div
          className="sc-fpJand dnxibe"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        large
      </label>
      <div
        className="sc-hBdhWE ggdNEt"
      >
        <input
          className="sc-kvmHFZ JSuiW"
          placeholder=" "
          readOnly={true}
          type="password"
        />
        <div
          className="sc-fpJand dnxibe"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <div
        className="sc-hBdhWE dIdpZs"
      >
        <input
          className="sc-kvmHFZ frJYJw"
          placeholder=" "
          readOnly={true}
          type="password"
        />
        <label
          className="sc-imdKTc hgJXpw"
        >
          xlarge
        </label>
        <div
          className="sc-fpJand dnxibe"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        medium
      </label>
      <div
        className="sc-hBdhWE ggdNEt"
      >
        <input
          className="sc-kvmHFZ tlMXB"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-fpJand dnxibe"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        large
      </label>
      <div
        className="sc-hBdhWE ggdNEt"
      >
        <input
          className="sc-kvmHFZ JSuiW"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-fpJand dnxibe"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <div
        className="sc-hBdhWE dIdpZs"
      >
        <input
          className="sc-kvmHFZ frJYJw"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="sc-imdKTc hgJXpw"
        >
          xlarge
        </label>
        <div
          className="sc-fpJand dnxibe"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        medium
      </label>
      <div
        className="sc-hBdhWE ggdNEt"
      >
        <input
          className="sc-kvmHFZ tlMXB"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-fpJand dnxibe"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        large
      </label>
      <div
        className="sc-hBdhWE ggdNEt"
      >
        <input
          className="sc-kvmHFZ JSuiW"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-fpJand dnxibe"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <div
        className="sc-hBdhWE dIdpZs"
      >
        <input
          className="sc-kvmHFZ frJYJw"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="sc-imdKTc hgJXpw"
        >
          xlarge
        </label>
        <div
          className="sc-fpJand dnxibe"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders with label RTL 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
        dir="rtl"
      >
        medium
      </label>
      <div
        className="sc-hBdhWE ggdNEt"
      >
        <input
          className="sc-kvmHFZ tlMXB"
          dir="rtl"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-fpJand igDcoR"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
        dir="rtl"
      >
        large
      </label>
      <div
        className="sc-hBdhWE ggdNEt"
      >
        <input
          className="sc-kvmHFZ JSuiW"
          dir="rtl"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-fpJand igDcoR"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <div
        className="sc-hBdhWE dIdpZs"
      >
        <input
          className="sc-kvmHFZ frJYJw"
          dir="rtl"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="sc-imdKTc dWOyyj"
        >
          xlarge
        </label>
        <div
          className="sc-fpJand igDcoR"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <div
        className="sc-hBdhWE ggdNEt"
      >
        <input
          className="sc-kvmHFZ tlMXB"
          placeholder="medium"
          type="password"
        />
        <div
          className="sc-fpJand dnxibe"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <div
        className="sc-hBdhWE ggdNEt"
      >
        <input
          className="sc-kvmHFZ JSuiW"
          placeholder="large"
          type="password"
        />
        <div
          className="sc-fpJand dnxibe"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <div
        className="sc-hBdhWE dIdpZs"
      >
        <input
          className="sc-kvmHFZ jWMdWB"
          placeholder="xlarge"
          type="password"
        />
        <label
          className="sc-imdKTc hgJXpw"
        />
        <div
          className="sc-fpJand dnxibe"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        medium
      </label>
      <div
        className="sc-hBdhWE ggdNEt"
      >
        <input
          className="sc-kvmHFZ gUfLpG"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-fpJand dnxibe"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        large
      </label>
      <div
        className="sc-hBdhWE ggdNEt"
      >
        <input
          className="sc-kvmHFZ hguYKt"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-fpJand dnxibe"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <div
        className="sc-hBdhWE ktmlgL"
      >
        <input
          className="sc-kvmHFZ frJYJw"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="sc-imdKTc hgJXpw"
        >
          xlarge
        </label>
        <div
          className="sc-fpJand dnxibe"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
